--- a/.github/workflows/push-to-ghcr.yml
+++ b/.github/workflows/push-to-ghcr.yml
@@ -18,9 +18,8 @@ jobs:
       - uses: actions/checkout@v4
 
       # https://github.com/marketplace/actions/push-to-ghcr
-      - name: Build and publish a Docker image for macbre/nginx-http3
+      - name: Build and publish a Docker image for ${{ github.repository }}
         uses: macbre/push-to-ghcr@v14
         with:
-          image_name: macbre/nginx-http3
+          image_name: professionalowo/nginx-http3
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          docker_io_token: ${{ secrets.DOCKER_IO_ACCESS_TOKEN }}
